# scatter_span

./: .clang-tidy  .cspell.json  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/configure_conan/: action.yml
.github/workflows/: api.yml  ci.yml  deploy.yml
docs/: doxygen.conf
include/scatter_span/: scatter_span.hpp
modules/: core.cppm  iterator.cppm  scatter_span.cppm
src/: scatter_span.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: main.test.cpp  scatter_span.test.cpp
